--- a/main.html
+++ b/main.html
@@ -15,11 +15,8 @@
             <div class="container">
               <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                    <h1>
-                        Help people
-                    </h1>
+                   <img src="/assets/image/SKK-white.svg" alt="">
                 </a>
-      
                 <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                   <li>
                     <a href="#" class="nav-link text-secondary">
@@ -53,7 +50,72 @@
     </header>
 
     <main>
- 
+      <div class="container">
+        <div class="bd-example">
+          <table class="table table-hover">
+              <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Имя</th>
+              <th scope="col">Фамилия</th>
+              <th scope="col">Отчество</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td scope="row">1</td>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <td scope="row">2</td>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <td scope="row">3</td>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+          </tbody>
+        
+          </table>
+        </div>
+<!--         <select class="form-select" multiple aria-label="пример элемента выбора размером равному 3">
+          <option selected>Откройте это меню выбора</option>
+          <option value="1">Один</option>
+          <option value="2">Два</option>
+          <option value="3">Три</option>
+        </select> -->
+      </div>
+      <div class="container">
+        <ol class="list-group list-group-numbered">
+          <li class="list-group-item d-flex justify-content-between align-items-start active">
+            <div class="ms-2 me-auto">
+              <div class="fw-bold">Подзаголовок</div>
+              Контент для элемента списка
+            </div>
+            <span class="badge bg-danger rounded-pill">14</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+              <div class="fw-bold">Подзаголовок</div>
+              Контент для элемента списка
+            </div>
+            <span class="badge bg-danger rounded-pill">14</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+              <div class="fw-bold">Подзаголовок</div>
+              Контент для элемента списка
+            </div>
+            <span class="badge bg-danger rounded-pill">14</span>
+          </li>
+        </ol>
+      </div>
     </main>
 
     <footer>
