--- a/main.html
+++ b/main.html
@@ -24,12 +24,23 @@
                     <div class="col-3">
                         <img src="/assets/image/client-img/1.JPG" class="img-thumbnail rounded" alt="client photo">
                     </div>
-                    <div class="col-9 client-data">
-                        <p><strong>Фамилия:</strong> Асылбеков</p>
-                        <p><strong>Имя:</strong> Алибек</p>                        
-                        <p><strong>Отчество:</strong> Касымович</p>
-                        <p><strong>Дата рождения:</strong> 1960.09.20</p>
-                        <p><strong>ИИН:</strong> 369258456</p>
+                    <div class="col-4 client-data">
+                        <p><strong>Фамилия: </strong> Асылбеков</p>
+                        <p><strong>Имя: </strong> Алибек</p>                        
+                        <p><strong>Отчество: </strong> Касымович</p>
+                        <p><strong>Дата рождения: </strong> 1960.09.20</p>
+                        <p><strong>ИИН: </strong>369258456</p>
+                        <p><strong>Место рождения: </strong>Астана</p>
+                        <p><strong>Адрес прописки: </strong>Карталинская 20/2 кв20</p>                        
+                    </div>
+                    <div class="col-5 client-data">
+                        <p><strong>Судимость: </strong>293 ч. 3 п. 2 УК Республики Казахстан</p>
+                        <p><strong>Инвалидность: </strong>Третья группа инвалидности</p>
+                        <p><strong>Информация о родственниках: </strong>Ұлы-Турсынбаев Бауыржан тел-87775799959
+                          Астана қаласы әкімдігінің
+                          «Шарапат» әлеуметтік қызмет көрсету орталығына»кетуіне байланысты
+                          ЖОЛДАМА-№108	28.11.2018
+                          Қарттар үйіне к.б.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -40,17 +51,70 @@
                             <h5>Посупление/Выписка:</h5>
                             <ul class="timeline">
                               <li class="timeline-item mb-1">
-                                <p class="text-muted mb-2 fw-bold"> 2022.03.15/22.09.20</p>
+                                <p class="text-muted mb-2"> 2022.03.15/22.09.20</p>
                               </li>                      
                               <li class="timeline-item mb-1">
-                                <p class="text-muted mb-2 fw-bold">2021.09.20/2022.03.15</p>
+                                <p class="text-muted mb-2">2021.09.20/В центе</p>
                               </li>
                             </ul>
                         </section>
                         <!-- Section: Timeline -->
                     </div>
                     <div class="col-9">
-                        
+                      <div class="client-documents py-5">
+                        <h4>Документы</h4>
+                        <img src="/assets/image/client-img/2.jpg" class="img-thumbnail" alt="client documents">
+                      </div>
+                      <div class="accordion py-5" id="accordionCollapse">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              <strong>Социально - медицинские, бытовые </strong>
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionCollapse">
+                            <div class="accordion-body">
+                              <strong>Мед осмотр:</strong>
+                              <div>
+                                анализы на ВИЧ,РВ, ФГ от 23.10.2017г -норма.Повторно ФГ от 07.06.2018г - норма.
+                              </div>
+                              <strong>Примечание:</strong>
+                              <div>
+                                Содействие в оформлении документов в МСУ. В 28.11.2018г направлен в МСУ " Шарапат" Вернулся из дома престарелых 16.09.2019г. В 27.08.2020г направлен в Хоспис ТОО "Омар"
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              <strong>Социально - психологические, трудовые, культурные</strong>
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionCollapse">
+                            <div class="accordion-body">
+                              <div>
+                                По состоянию здоровья библиотеку не посещает.
+                              </div>
+                              <strong>Примечание: </strong>Нет
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              <strong>Социально - экономические</strong>
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionCollapse">
+                            <div class="accordion-body">
+                              <div>Оказано содействие в переводе пенсии в г. Астана.</div>
+                              <strong>Примечание: </strong>Нет
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
                     </div>
                 </div>
             </div>     
@@ -112,31 +176,6 @@
               </p>
             </div>
         </div>
-<!--         <div class="container">
-            <ol class="list-group">
-              <li class="list-group-item d-flex justify-content-between align-items-start active">
-                <div class="ms-2 me-auto">
-                  <div class="fw-bold">Находящийся в центре</div>
-                  Все пациенты находящийся в центре
-                </div>
-                <span class="badge bg-danger rounded-pill">30</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                  <div class="fw-bold">Выписанные из центра</div>
-                  Все пациенты выписанные из центра
-                </div>
-                <span class="badge bg-danger rounded-pill">10</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                  <div class="fw-bold">Проходящие обслуживание</div>
-                  Все пациенты проходящие обслуживание
-                </div>
-                <span class="badge bg-danger rounded-pill">13</span>
-              </li>
-            </ol>
-        </div> -->
         <div class="container clinet-conent">
             <div class="row">
                 <div class="client-group col-4">
@@ -187,10 +226,6 @@
                 </div>
                 <div class="client-list col-8">
                     <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary">
-                        <a href="/" class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-                          <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-                          <span class="fs-5 fw-semibold">List group name</span>
-                        </a>
                         <div class="list-group border-bottom scrollarea">
                             <a href="#" class="list-group-item list-group-item-action active d-flex gap-3 py-3" aria-current="true">
                                 <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
