--- a/main.html
+++ b/main.html
@@ -7,10 +7,37 @@
     <title>Социальные раб</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
     <link rel="stylesheet" href="/css/dist/main.css">
 </head>
 <body>
 <!-- modal start -->
+<div class="modal fade" id="ClientDocumentsModal" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true" tabindex="-1">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Заголовок модального окна</h5>
+        <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button> -->
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <div class="ClientModalImage">
+                <img src="/assets/image/client-img/1.jpg" alt="" class="col-12">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#ClientInformation">Закрыть</button>
+        <!-- <button type="button" class="btn btn-primary">Сохранить изменения</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="modal fade modal-client" id="ClientInformation" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
       <div class="modal-content">
@@ -22,7 +49,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-3">
-                        <img src="/assets/image/client-img/1.JPG" class="img-thumbnail rounded" alt="client photo">
+                        <img src="/assets/image/client-img/1.JPG" class="rounded col-12" alt="client photo">
                     </div>
                     <div class="col-4 client-data">
                         <p><strong>Фамилия: </strong> Асылбеков</p>
@@ -63,7 +90,21 @@
                     <div class="col-9">
                       <div class="client-documents py-5">
                         <h4>Документы</h4>
-                        <img src="/assets/image/client-img/2.jpg" class="img-thumbnail" alt="client documents">
+
+
+
+
+                        <div class="client-documents-gallery">
+                          <a href="/assets/image/client-img/2.jpg" data-fancybox="ID_Client" data-caption="Ducument Name 1">
+                            <img src="/assets/image/client-img/2.jpg" />
+                          </a>                          
+                          <a href="/assets/image/client-img/3.JPG" data-caption="Document Name 2">
+                            <img src="/assets/image/client-img/3.JPG" />
+                          </a>
+                        </div>
+
+
+                        
                       </div>
                       <div class="accordion py-5" id="accordionCollapse">
                         <div class="accordion-item">
@@ -121,7 +162,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-          <button type="button" class="btn btn-primary">Понял</button>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#ClientDocumentsModal">Понял</button>
         </div>
       </div>
     </div>
@@ -287,5 +328,10 @@ footer
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <script>
+    Fancybox.bind('[data-fancybox="ID_Client"]', {
+      // Your custom options
+    });</script>
 </body>
 </html>
