--- a/main.html
+++ b/main.html
@@ -7,25 +7,34 @@
     <title>Социальные раб</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
-    <link rel="stylesheet" href="/css/dist/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.thumbs.css">
+    <link rel="stylesheet" href="/assets/css/dist/main.css">
 </head>
 <body>
 <!-- modal start -->
 <div class="modal fade" id="ClientDocumentsModal" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true" tabindex="-1">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Заголовок модального окна</h5>
-        <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button> -->
-      </div>
+
       <div class="modal-body">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-12">
-              <div class="ClientModalImage">
-                <img src="/assets/image/client-img/1.jpg" alt="" class="col-12">
+            <div class="f-carousel" id="myCarousel">
+              <div class="f-carousel__slide" data-thumb-src="/assets/image/client-img/2.jpg">
+                <img class="col-12" alt="" data-lazy-src="/assets/image/client-img/2.jpg"/>
               </div>
+              <div class="f-carousel__slide" data-thumb-src="/assets/image/client-img/3.jpg">
+                <img class="col-12" alt="" data-lazy-src="/assets/image/client-img/3.jpg"/>
+              </div>
+              <div class="f-carousel__slide" data-thumb-src="/assets/image/client-img/4.jpg">
+                <img class="col-12" alt="" data-lazy-src="/assets/image/client-img/4.jpg"/>
+              </div>
+              <div class="f-carousel__slide" data-thumb-src="/assets/image/client-img/doc.pdf">
+                <!-- <img class="col-12" alt="" data-lazy-src="/assets/image/client-img/doc.pdf"/> -->
+                <embed src="/assets/image/client-img/doc.pdf" width="95%" height="100%"/>
+              </div>
+              <!-- <object><embed src="ссылка файла pdf" width="700" height="500" /></object> -->
             </div>
           </div>
         </div>
@@ -49,7 +58,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-3">
-                        <img src="/assets/image/client-img/1.JPG" class="rounded col-12" alt="client photo">
+                        <img src="/assets/image/client-img/2.JPG" class="rounded col-12" alt="client photo">
                     </div>
                     <div class="col-4 client-data">
                         <p><strong>Фамилия: </strong> Асылбеков</p>
@@ -90,23 +99,9 @@
                     <div class="col-9">
                       <div class="client-documents py-5">
                         <h4>Документы</h4>
-
-
-
-
-                        <div class="client-documents-gallery">
-                          <a href="/assets/image/client-img/2.jpg" data-fancybox="ID_Client" data-caption="Ducument Name 1">
-                            <img src="/assets/image/client-img/2.jpg" />
-                          </a>                          
-                          <a href="/assets/image/client-img/3.JPG" data-caption="Document Name 2">
-                            <img src="/assets/image/client-img/3.JPG" />
-                          </a>
-                        </div>
-
-
-                        
+                        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#ClientDocumentsModal">Документы</button>                    
                       </div>
-                      <div class="accordion py-5" id="accordionCollapse">
+                      <div class="accordion" id="accordionCollapse">
                         <div class="accordion-item">
                           <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -162,7 +157,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#ClientDocumentsModal">Понял</button>
+          <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#ClientDocumentsModal">Понял</button> -->
         </div>
       </div>
     </div>
@@ -268,7 +263,7 @@
                 <div class="client-list col-8">
                     <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary">
                         <div class="list-group border-bottom scrollarea">
-                            <a href="#" class="list-group-item list-group-item-action active d-flex gap-3 py-3" aria-current="true">
+                            <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                                 <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
                                 <div class="d-flex gap-2 w-100 justify-content-between">
                                   <div>
@@ -296,7 +291,7 @@
                                   <small class="text-body-secondary"><span class="badge rounded-pill text-bg-success">Выписан</span></small>
                                 </div>
                             </a> 
-                            <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true" data-bs-toggle="modal" data-bs-target="#ClientInformation">
+                            <a href="#" class="list-group-item list-group-item-action active d-flex gap-3 py-3" aria-current="true" data-bs-toggle="modal" data-bs-target="#ClientInformation">
                                 <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
                                 <div class="d-flex gap-2 w-100 justify-content-between">
                                   <div>
@@ -328,10 +323,8 @@ footer
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-    <script>
-    Fancybox.bind('[data-fancybox="ID_Client"]', {
-      // Your custom options
-    });</script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.thumbs.umd.js"></script>
+    <script src="/assets/js/slideDocuments.js"></script>
 </body>
 </html>
