--- a/main.html
+++ b/main.html
@@ -13,6 +13,133 @@
 </head>
 <body>
 <!-- modal start -->
+<!-- start modal window Users -->
+<div class="modal fade" id="Users" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Пользователи</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="bg-body rounded shadow-sm">
+              <div class="d-flex align-items-center text-body-secondary pt-3">                
+                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                  <div class="d-flex align-items-center justify-content-between">
+                    <div class="UserObjectInformation d-flex align-items-center">
+                      <div class="UsersLogo px-2">
+                        <i class="bi bi-person-circle"></i>
+                      </div>
+                      <div class="UserInformation">
+                        <strong class="text-gray-dark">Сериков Кайсархан Куатович <span class="badge text-bg-success">unlimited</span></strong>
+                        <span class="d-block">@admin</span>
+                      </div> 
+                    </div> 
+                    <div class="UserChildButton d-flex align-items-center">
+                      <div class="btn-group" role="group" aria-label="Группа кнопок">
+                        <button type="button" class="btn btn-warning"><i class="bi bi-person-fill-lock"></i></button>                      
+                        <button type="button" class="btn btn-danger"><i class="bi bi-person-fill-x"></i></button>
+                      </div>                      
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex align-items-center text-body-secondary pt-3">                
+                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                  <div class="d-flex align-items-center justify-content-between">
+                    <div class="UserObjectInformation d-flex align-items-center">
+                      <div class="UsersLogo px-2">
+                        <i class="bi bi-person-circle"></i>
+                      </div>
+                      <div class="UserInformation">
+                        <strong class="text-gray-dark">Аманкелды Жалгас Аманжолович <span class="badge text-bg-warning">limited</span></strong>
+                        <span class="d-block">@LoginUser</span>
+                      </div> 
+                    </div> 
+                    <div class="UserChildButton d-flex align-items-center">
+                      <div class="btn-group" role="group" aria-label="Группа кнопок">
+                        <button type="button" class="btn btn-warning"><i class="bi bi-person-fill-lock"></i></button>                      
+                        <button type="button" class="btn btn-danger"><i class="bi bi-person-fill-x"></i></button>
+                      </div>                      
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#AddUser">Добавить</button>    
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end modal window Users -->
+
+<!-- start modal window Add user -->
+<div class="modal fade" id="AddUser" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Добавить пользователя</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="AddUserForm d-flex">
+              <div class="AddUserFormFIO col-6 pr-2">
+                <div class="form-floating mx-2 my-3">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="Фамилия">
+                  <label for="floatingInput">Фамилия</label>
+                </div>
+                <div class="form-floating mx-2 my-3">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="Имя">
+                  <label for="floatingInput">Имя</label>
+                </div>
+                <div class="form-floating mx-2 my-3">
+                  <input type="text" class="form-control" id="floatingInput" placeholder="Отчество">
+                  <label for="floatingInput">Отчество</label>
+                </div>
+              </div>
+              <div class="formUserFromLogin col-6 pl-2">
+                <div class="input-group px-2 my-3">
+                  <span class="input-group-text">@</span>
+                  <div class="form-floating">
+                    <input type="text" class="form-control" id="floatingInputGroup1" placeholder="login">
+                    <label for="floatingInputGroup1">login</label>
+                  </div>
+                </div>
+                <div class="form-floating mx-2 my-3">
+                  <input type="password" class="form-control" id="floatingPassword" placeholder="Пароль">
+                  <label for="floatingPassword">Пароль</label>
+                </div>
+                <div class="form-floating mx-2 my-3">
+                  <select class="form-select" id="floatingSelectGrid">
+                    <option selected>Выберите роль</option>
+                    <option value="1">unlimited</option>
+                    <option value="2">limited</option>
+                  </select>
+                  <label for="floatingSelect">Роль пользователя</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#Users">Назад</button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#Users">Сохранить</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end modal window Add user -->
+<!-- start modal window client documents -->
 <div class="modal fade" id="ClientDocumentsModal" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
     <div class="modal-content">
@@ -40,18 +167,20 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#ClientInformation">Закрыть</button>
+        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-dismiss="modal" data-bs-target="#ClientInformation">Назад</button>
         <!-- <button type="button" class="btn btn-primary">Сохранить изменения</button> -->
       </div>
     </div>
   </div>
 </div>
+<!-- end modal window client documents -->
 
+<!-- start modal window client information -->
 <div class="modal fade modal-client" id="ClientInformation" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Пациент First name and Last name <small class="text-body-secondary"><span class="badge rounded-pill text-bg-warning">В обслуживаний</span></small></h5>
+          <h5 class="modal-title" id="staticBackdropLabel">Асылбеков Алибек Касымович <small class="text-body-secondary"><span class="badge rounded-pill text-bg-warning">В обслуживаний</span></small></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <div class="modal-body">
@@ -162,6 +291,7 @@
       </div>
     </div>
 </div>
+<!-- end modal window client information -->
 <!-- modal end -->
     <header>
         <div class="px-3 py-2 text-bg-dark">
@@ -172,26 +302,19 @@
                 </a>
                 <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                   <li>
-                    <a href="#" class="nav-link text-secondary">
+                    <a href="#" class="nav-link text-white">
                         <i class="header-icon bi bi-list-check d-block mx-auto mb-1"></i>
                         Лист
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="nav-link text-white">
-
+                    <a href="#" class="nav-link text-white" aria-current="true" data-bs-toggle="modal" data-bs-target="#Users">
                         <i class="header-icon bi bi-person-lines-fill d-block mx-auto mb-1"></i>
                       Users
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="nav-link text-white">
-                        <i class="header-icon bi bi-bezier d-block mx-auto mb-1"></i>
-                      User history
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="nav-link text-white">
+                    <a href="/index.html" class="nav-link text-white">
                         <i class="header-icon bi bi-box-arrow-right d-block mx-auto mb-1"></i>
                       Exit
                     </a>
@@ -295,7 +418,7 @@
                                 <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
                                 <div class="d-flex gap-2 w-100 justify-content-between">
                                   <div>
-                                    <h6 class="mb-0"><strong>This las name and first name</strong></h6>
+                                    <h6 class="mb-0"><strong>Асылбеков Алибек Касымович</strong></h6>
                                   </div>
                                   <small class="text-body-secondary"><span class="badge rounded-pill text-bg-warning">В обслуживаний</span></small>
                                 </div>
