add filds password

--- a/main.html
+++ b/main.html
@@ -36,8 +36,12 @@
                         <strong class="text-gray-dark">Сериков Кайсархан Куатович <span class="badge text-bg-success">unlimited</span></strong>
                         <span class="d-block">@admin</span>
                       </div> 
-                    </div> 
+                    </div>                     
                     <div class="UserChildButton d-flex align-items-center">
+                      <div class="form-floating mx-4">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Новый пароль">
+                        <label for="floatingPassword">Новый пароль</label>
+                      </div>
                       <div class="btn-group" role="group" aria-label="Группа кнопок">
                         <button type="button" class="btn btn-warning"><i class="bi bi-person-fill-lock"></i></button>                      
                         <button type="button" class="btn btn-danger"><i class="bi bi-person-fill-x"></i></button>
@@ -59,6 +63,10 @@
                       </div> 
                     </div> 
                     <div class="UserChildButton d-flex align-items-center">
+                      <div class="form-floating mx-4">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Новый пароль">
+                        <label for="floatingPassword">Новый пароль</label>
+                      </div>
                       <div class="btn-group" role="group" aria-label="Группа кнопок">
                         <button type="button" class="btn btn-warning"><i class="bi bi-person-fill-lock"></i></button>                      
                         <button type="button" class="btn btn-danger"><i class="bi bi-person-fill-x"></i></button>
